5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1807_2563.log
== TEST (2019-06-05 22:40:26) 
-- CODE:
mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	for x  in mediaf:
		if x > 5:
			print(x)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    mediaf = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:40:45) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	for x  in mediaf:
		if x > 5:
			print(x)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:45:23) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	monitores = 0
	
	for x  in mediaf:
		
		if x > 5 and x < 7:
			monitores += 1
			
			print(monitores)
		
		
		
		
		
	mediaf = array(eval(input("dnv: "))
	
-- ERROR:
File "XXXX", line 22
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:45:28) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	monitores = 0
	
	for x  in mediaf:
		
		if x > 5 and x < 7:
			monitores += 1
			
			print(monitores)
		
		
		
		
		
	mediaf = array(eval(input("dnv: "))
-- ERROR:
File "XXXX", line 21
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:45:32) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	monitores = 0
	
	for x  in mediaf:
		
		if x > 5 and x < 7:
			monitores += 1
			
			print(monitores)
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:46:50) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	monitores = 0
	
	for x  in mediaf:
		
		if x > 5 and x < 7:
			aprovados += 1
			
			print(aprovados)
		
		print(aprovados)
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:47:12) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	aprovados = 0
		
	for x  in mediaf:
		
		if x > 5 and x < 7:
			aprovados += 1
			
			print(aprovados)
		
		print(aprovados)
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:47:49) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	aprovados = 0
		
	for x  in mediaf:
		
		if x > 5 and x < 7:
			aprovados += 1
			
			print(aprovados)
		
		if x > 5 and x > 7:
			print(aprovados)
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:49:45) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x  in mediaf:
		
		if x > 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
				
		print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:49:58) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x  in mediaf:
		
		if x > 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
				
		print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:52:04) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x  in mediaf:
		
		if x > 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
				
				print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:52:15) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x  in mediaf:
		
		if x > 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
				
			print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:53:23) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
				
			print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:54:15) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
				
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 22:54:26) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
				
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- EXECUTION TIME:
1.19119
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
4
4
2
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
0
1
8
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
3
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:54:30) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
				
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:54:45) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
				
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 22:54:57) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
				
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- EXECUTION TIME:
1.14774
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
4
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
0
0
8
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
2
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:54:58) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
				
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:55:32) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
		if x < 7 and x >= 5:
				monitor += 1
				
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:55:55) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
		if x < 7:
			monitor += 1
			
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:56:01) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
		if x < 7:
			monitor += 1
			
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:56:36) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
			
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:57:58) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
			
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:58:20) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
			
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:58:24) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
			
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:58:27) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x <= 7:
				monitor += 1
			
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:59:47) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
			
	print(aprovados - monitor)
		
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 23:01:29) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
	naomonitores = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
			
		if x >= 5 and x < 7:
			naomonitores += 1
		
	print(aprovados - monitor)
	print(naomonitores)	
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 23:01:45) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
	naomonitores = 0
		
	for x in mediaf:
		
		if x >= 5:
			aprovados += 1
			
			if x < 7:
				monitor += 1
			
		if x >= 5 and x < 7:
			naomonitores += 1
		
	
	print(naomonitores)	
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- EXECUTION TIME:
1.0431
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
medias finais: 11
dnv: 4
dnv: 1
dnv:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
medias finais: 5
dnv: 3
dnv:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 23:01:56) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
	naomonitores = 0
		
	for x in mediaf:
		
		
		if x >= 5 and x < 7:
			naomonitores += 1
		
	print(naomonitores)	
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 23:02:20) 
-- CODE:
from numpy import *

mediaf = array(eval(input("medias finais: ")))

while size(mediaf) > 1:
	
	aprovados = 0
	monitor = 0
	naomonitores = 0
		
	for x in mediaf:
		
		
		if x >= 5 and x < 7:
			naomonitores += 1
		
	print(naomonitores)	
		
		
		
		
		
		
	mediaf = array(eval(input("dnv: ")))
-- EXECUTION TIME:
1.13942
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
